# gRPC-chat

./: .gitignore  Dockerfile  README.md
UI_test/: main  main.cc  simpleChatUI.cc  simpleChatUI.hh
client/: .gitignore  CMakeLists.txt
client/proto/: chat.proto
client/src/: main.cc  simpleChatUI.cc  simpleChatUI.h  timeFunctions.cc  timeFunctions.h  welcomeScreen.cc  welcomeScreen.h
client/src/include/: simpleChatUI.cc  simpleChatUI.h  timeFunctions.h  welcomeScreen.cc  welcomeScreen.h
client/src/include/UI/: BaseUI.h  simpleChatUI.cc  simpleChatUI.h  theme.h  welcomeScreen.cc  welcomeScreen.h
client/src/include/Utility/: timeFunctions.cc  timeFunctions.h
client/src/include/Workers/: workers.h
server/: CMakeLists.txt
server/proto/: chat.proto
server/src/: main.cc
server/src/Include/: chatServiceServer.cc  chatServiceServer.h
